--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "author": "Lupo Montero",
   "license": "UNLICENSED",
   "dependencies": {
-    "async": "^2.0.0-rc.5",
-    "event-stream": "^3.3.2",
-    "google-auth-library": "^0.9.8",
-    "googleapis": "^7.1.0",
-    "handlebars": "^4.0.5",
-    "hapi": "^13.4.1",
-    "inert": "^4.0.0",
-    "request": "^2.72.0",
-    "vision": "^4.1.0"
+    "async": "^2.1.4",
+    "event-stream": "^3.3.4",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^16.1.0",
+    "handlebars": "^4.0.6",
+    "hapi": "^16.1.0",
+    "inert": "^4.1.0",
+    "request": "^2.79.0",
+    "vision": "^4.1.1"
   },
   "devDependencies": {
-    "mocha": "^2.5.3"
+    "mocha": "^3.2.0"
   }
 }
